@@ -48,13 +48,14 @@
 #define IMAP4_CAPABILITY_DELIMITER " "
 #define IMAP4S_DEFAULT_PORT "993"
 
-#define IMAP4_CMD_NOOP         "NOOP"
-#define IMAP4_CMD_STARTTLS     "STARTTLS"
-#define IMAP4_CMD_CAPABILLTY   "CAPABILITY"
-#define IMAP4_CMD_AUTHENTICATE "AUTHENTICATE"
-#define IMAP4_CMD_LOGOUT       "LOGOUT"
-#define IMAP4_CMD_LOGIN        "LOGIN"
-#define IMAP4_CMD_BYE          "BYE"
+#define IMAP4_CMD_NOOP          "NOOP"
+#define IMAP4_CMD_STARTTLS      "STARTTLS"
+#define IMAP4_CMD_LOGINDISABLED "LOGINDISABLED"
+#define IMAP4_CMD_CAPABILLTY    "CAPABILITY"
+#define IMAP4_CMD_AUTHENTICATE  "AUTHENTICATE"
+#define IMAP4_CMD_LOGOUT        "LOGOUT"
+#define IMAP4_CMD_LOGIN         "LOGIN"
+#define IMAP4_CMD_BYE           "BYE"
 
 /**********************************************************************
  * imap4_write
